--- a/miniapps/base_shell/auth/profile.html
+++ b/miniapps/base_shell/auth/profile.html
@@ -29,7 +29,6 @@
             </button>
             <ul id="user-menu" class="menu" hidden>
               <li><button data-action="profile" data-i18n="actions.profile">Perfil</button></li>
-              <li><button data-action="switch" data-i18n="actions.switchUser">Trocar usuário</button></li>
               <li><button data-action="logout" data-i18n="actions.logout">Sair</button></li>
             </ul>
           </div>
@@ -156,6 +155,69 @@
                 <button id="delete-account" class="cta danger" type="button" data-i18n="auth.profile.delete">Excluir conta</button>
                 <p id="profile-feedback" class="feedback" role="status" aria-live="polite"></p>
               </div>
+            </article>
+            <article class="card" id="user-management" hidden>
+              <header class="card-header">
+                <h2 data-i18n="auth.profile.userManagementTitle">Gerenciar usuários</h2>
+                <button id="user-management-create" class="cta" type="button" data-i18n="auth.profile.userAdd">
+                  Adicionar usuário
+                </button>
+              </header>
+              <p class="card-description" data-i18n="auth.profile.userManagementDescription">
+                Controle quem pode acessar o aplicativo. Adicione novos usuários, edite informações ou duplique perfis existentes.
+              </p>
+              <div class="table-wrapper">
+                <table class="user-management-table">
+                  <thead>
+                    <tr>
+                      <th scope="col" data-i18n="auth.profile.userTable.name">Nome</th>
+                      <th scope="col" data-i18n="auth.profile.userTable.email">E-mail</th>
+                      <th scope="col" data-i18n="auth.profile.userTable.role">Perfil</th>
+                      <th scope="col" data-i18n="auth.profile.userTable.createdAt">Criado em</th>
+                      <th scope="col" data-i18n="auth.profile.userTable.actions">Ações</th>
+                    </tr>
+                  </thead>
+                  <tbody id="user-management-list">
+                    <tr>
+                      <td colspan="5" data-i18n="auth.profile.userEmpty">Nenhum usuário cadastrado.</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <p id="user-management-feedback" class="feedback" role="status" aria-live="polite"></p>
+              <form id="user-management-form" class="form" hidden novalidate>
+                <fieldset>
+                  <legend id="user-management-form-title" data-i18n="auth.profile.userForm.title.create">Adicionar usuário</legend>
+                  <div class="form-field">
+                    <label for="manage-name" data-i18n="auth.form.name">Nome</label>
+                    <input id="manage-name" name="name" type="text" autocomplete="name" required />
+                  </div>
+                  <div class="form-field">
+                    <label for="manage-email" data-i18n="auth.form.email">E-mail</label>
+                    <input id="manage-email" name="email" type="email" autocomplete="email" required />
+                  </div>
+                  <div class="form-field">
+                    <label for="manage-password" data-i18n="auth.form.password">Senha</label>
+                    <input id="manage-password" name="password" type="password" autocomplete="new-password" required />
+                    <small class="form-hint" data-i18n="auth.profile.userForm.passwordHint">
+                      Defina uma senha temporária e compartilhe com o novo usuário.
+                    </small>
+                  </div>
+                  <div class="form-field">
+                    <label for="manage-role" data-i18n="auth.form.role">Perfil de acesso</label>
+                    <select id="manage-role" name="role">
+                      <option value="owner" data-i18n="auth.form.owner">Proprietário</option>
+                      <option value="member" data-i18n="auth.form.member">Membro</option>
+                    </select>
+                  </div>
+                </fieldset>
+                <div class="form-actions">
+                  <button id="user-management-submit" class="cta" type="submit" data-i18n="auth.profile.userForm.submit.create">
+                    Adicionar
+                  </button>
+                  <button id="user-management-cancel" class="ghost" type="button" data-i18n="actions.cancel">Cancelar</button>
+                </div>
+              </form>
             </article>
           </section>
         </main>
