Fix user panel shortcut fallback

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -84,11 +84,11 @@
                     </button>
                   </li>
                   <li>
-                    <button id="btnUserPanel" class="submenu-action" type="button">
+                    <a id="btnUserPanel" class="submenu-action" href="./auth/profile.html">
                       <span class="submenu-icon" aria-hidden="true">👤</span>
                       <span class="submenu-label" aria-hidden="true" data-i18n="settings.userPanel">Painel do usuário</span>
                       <span class="sr-only" data-i18n="actions.openUserPanel">Abrir painel do usuário</span>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </li>
