--- a/index.html
+++ b/index.html
@@ -4,39 +4,94 @@
     <meta charset="utf-8" />
     <title>Projeto Marco</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="refresh" content="0; url=miniapps/base_shell/" />
     <style>
+      :root {
+        color-scheme: light dark;
+      }
+
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
         margin: 0;
         min-height: 100vh;
         display: grid;
         place-content: center;
-        padding: 2rem;
-        text-align: center;
-        color: #0f172a;
+        padding: 3rem 1.5rem;
         background: #f8fafc;
+        color: #0f172a;
+      }
+
+      main {
+        max-width: 640px;
+        display: grid;
+        gap: 2rem;
+      }
+
+      h1 {
+        font-size: clamp(1.75rem, 5vw, 2.5rem);
+        margin: 0;
+        text-align: center;
+      }
+
+      p {
+        margin: 0;
+        text-align: center;
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: grid;
+        gap: 1rem;
+      }
+
+      li {
+        border-radius: 1rem;
+        border: 1px solid rgba(15, 23, 42, 0.12);
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(6px);
+        padding: 1.25rem 1.5rem;
       }
 
       a {
         color: #2563eb;
+        text-decoration: none;
+        font-weight: 600;
+      }
+
+      a:hover,
+      a:focus {
+        text-decoration: underline;
+      }
+
+      small {
+        display: block;
+        margin-top: 0.5rem;
+        color: rgba(15, 23, 42, 0.72);
+        font-weight: 400;
       }
     </style>
-    <script>
-      window.addEventListener('DOMContentLoaded', () => {
-        const target = 'miniapps/base_shell/';
-        const resolved = new URL(target, window.location.href);
-        if (window.location.pathname !== resolved.pathname) {
-          window.location.replace(resolved.href);
-        }
-      });
-    </script>
   </head>
   <body>
-    <p>Redirecionando para o MiniApp Base Shell…</p>
-    <p>
-      Se você não for redirecionado automaticamente,
-      <a href="miniapps/base_shell/">acesse a versão estática do miniapp</a>.
-    </p>
+    <main>
+      <header>
+        <h1>Projeto Marco</h1>
+        <p>Selecione um mini-app para abrir a visualização estática correspondente.</p>
+      </header>
+      <ul>
+        <li>
+          <a href="miniapps/base_shell/">Shell principal</a>
+          <small>Interface base responsável por orquestrar os demais mini-apps.</small>
+        </li>
+        <li>
+          <a href="miniapps/mini_app_1/">Mini-app 1</a>
+          <small>Esqueleto inicial carregado pelo shell base.</small>
+        </li>
+        <li>
+          <a href="miniapps/mini_app_2/">Mini-app 2</a>
+          <small>Placeholder preparado para integração com o shell base.</small>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
