Refine shell navigation and mini-app loading

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -39,7 +39,7 @@
           <nav>
             <ul>
               <li>
-                <a href="#" aria-current="page" title="Dashboard">
+                <a href="#" data-nav-action="home" title="Dashboard">
                   <span class="icon" aria-hidden="true">🏠</span>
                   <span class="label" data-i18n="nav.dashboard">Início</span>
                 </a>
