--- a/index.html
+++ b/index.html
@@ -4,94 +4,90 @@
     <meta charset="utf-8" />
     <title>Projeto Marco</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="refresh" content="0; url=./miniapps/base_shell/index.html" />
     <style>
       :root {
         color-scheme: light dark;
       }
 
+      html,
       body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        height: 100%;
+      }
+
+      body {
         margin: 0;
-        min-height: 100vh;
         display: grid;
-        place-content: center;
-        padding: 3rem 1.5rem;
+        place-items: center;
+        padding: clamp(2rem, 6vw, 4rem) clamp(1rem, 4vw, 2.5rem);
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
         background: #f8fafc;
         color: #0f172a;
       }
 
       main {
-        max-width: 640px;
         display: grid;
-        gap: 2rem;
+        gap: 1.5rem;
+        text-align: center;
+        max-width: 420px;
       }
 
       h1 {
-        font-size: clamp(1.75rem, 5vw, 2.5rem);
         margin: 0;
-        text-align: center;
+        font-size: clamp(1.75rem, 4vw, 2.5rem);
       }
 
       p {
         margin: 0;
-        text-align: center;
-      }
-
-      ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: grid;
-        gap: 1rem;
-      }
-
-      li {
-        border-radius: 1rem;
-        border: 1px solid rgba(15, 23, 42, 0.12);
-        background: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(6px);
-        padding: 1.25rem 1.5rem;
+        line-height: 1.6;
       }
 
       a {
         color: #2563eb;
-        text-decoration: none;
         font-weight: 600;
+        text-decoration: none;
       }
 
       a:hover,
       a:focus {
         text-decoration: underline;
       }
-
-      small {
-        display: block;
-        margin-top: 0.5rem;
-        color: rgba(15, 23, 42, 0.72);
-        font-weight: 400;
-      }
     </style>
   </head>
   <body>
     <main>
-      <header>
-        <h1>Projeto Marco</h1>
-        <p>Selecione um mini-app para abrir a visualização estática correspondente.</p>
-      </header>
-      <ul>
-        <li>
-          <a href="miniapps/base_shell/">Shell principal</a>
-          <small>Interface base responsável por orquestrar os demais mini-apps.</small>
-        </li>
-        <li>
-          <a href="miniapps/mini_app_1/">Mini-app 1</a>
-          <small>Esqueleto inicial carregado pelo shell base.</small>
-        </li>
-        <li>
-          <a href="miniapps/mini_app_2/">Mini-app 2</a>
-          <small>Placeholder preparado para integração com o shell base.</small>
-        </li>
-      </ul>
+      <h1>Carregando o shell principal…</h1>
+      <p>
+        Aguarde um instante enquanto redirecionamos para a experiência completa.
+        Caso nada aconteça, utilize o link abaixo.
+      </p>
+      <p>
+        <a id="shell-link" href="./miniapps/base_shell/index.html">Abrir shell base</a>
+      </p>
+      <noscript>
+        <p>
+          O redirecionamento automático requer JavaScript habilitado. Utilize o link acima
+          para acessar o shell.
+        </p>
+      </noscript>
     </main>
+    <script>
+      (function redirectToShell() {
+        const target = './miniapps/base_shell/index.html';
+        const anchor = document.getElementById('shell-link');
+        if (anchor) {
+          anchor.href = target;
+        }
+        try {
+          const url = new URL(target, window.location.href);
+          if (url.href !== window.location.href) {
+            window.location.replace(url.href);
+          }
+        } catch (error) {
+          console.warn('fallback redirect failed', error);
+          window.location.href = target;
+        }
+      })();
+    </script>
   </body>
 </html>
