--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -175,6 +175,47 @@
         </div>
       </footer>
     </div>
+    <div
+      id="language-dialog"
+      class="language-dialog-backdrop"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="language-dialog-title"
+      aria-describedby="language-dialog-description"
+      hidden
+    >
+      <div class="language-dialog__panel" role="document">
+        <h2
+          id="language-dialog-title"
+          class="language-dialog__title"
+          data-i18n="language.dialog.title"
+        >
+          Preferências de idioma
+        </h2>
+        <p
+          id="language-dialog-description"
+          class="language-dialog__description"
+          data-i18n="language.dialog.description"
+        >
+          Escolha o idioma da interface. As alterações são aplicadas imediatamente.
+        </p>
+        <div
+          class="language-dialog__options"
+          role="group"
+          data-language-options
+        ></div>
+        <div class="language-dialog__actions">
+          <button
+            type="button"
+            class="ghost"
+            data-language-cancel
+            data-i18n="actions.cancel"
+          >
+            Cancelar
+          </button>
+        </div>
+      </div>
+    </div>
     <script type="module" src="./app.js"></script>
   </body>
 </html>
