Add onboarding guidance and language cycling for base shell

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -150,6 +150,27 @@
                 Criar conta
               </a>
             </div>
+            <section class="onboarding-card" data-onboarding>
+              <h3 class="onboarding-card__title" data-i18n="onboarding.title">Primeiros passos</h3>
+              <p class="onboarding-card__description" data-onboarding-empty data-i18n="onboarding.description.empty">
+                Ainda não há contas neste dispositivo. Crie sua primeira conta para acessar o painel.
+              </p>
+              <ol class="onboarding-steps" data-onboarding-empty>
+                <li data-register-guard data-i18n="onboarding.step.register">Use "Criar conta" para registrar a primeira pessoa administradora.</li>
+                <li data-i18n="onboarding.step.preferences">Personalize idioma e tema para toda a experiência.</li>
+                <li data-i18n="onboarding.step.explore">Abra o catálogo de mini-apps e teste as integrações disponíveis.</li>
+              </ol>
+              <p class="onboarding-card__tip" data-onboarding-empty data-i18n="onboarding.tip">
+                Dica: depois de registrar a primeira conta você poderá adicionar outras pessoas pelo painel do usuário.
+              </p>
+              <p class="onboarding-card__description" data-onboarding-existing data-i18n="onboarding.description.existing">
+                Já existem contas cadastradas neste dispositivo. Entre com suas credenciais ou peça acesso a quem administra o painel.
+              </p>
+              <ol class="onboarding-steps" data-onboarding-existing>
+                <li data-i18n="onboarding.step.login">Selecione "Acessar" e informe e-mail e senha fornecidos.</li>
+                <li data-i18n="onboarding.step.support">Precisa de ajuda? Solicite que uma pessoa administradora crie uma nova conta no painel do usuário.</li>
+              </ol>
+            </section>
           </section>
         </main>
       </div>
