Atualiza botão de usuário com ícone acessível

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -25,7 +25,8 @@
         <div class="toolbar" role="group" aria-label="Global actions">
           <div class="user-menu" role="group" aria-label="User menu">
             <button id="btnUser" class="ghost" aria-haspopup="true" aria-expanded="false">
-              <span id="current-user">--</span>
+              <span class="user-avatar" aria-hidden="true">👤</span>
+              <span id="current-user" class="sr-only">--</span>
             </button>
             <ul id="user-menu" class="menu" hidden>
               <li><button data-action="profile" data-i18n="actions.profile">Perfil</button></li>
